# riptide-game

./: CMakeLists.txt  editor.cpp  main.cpp  map.txt
src/: ability.cpp  ability.hpp  camera.cpp  camera.hpp  loop.cpp  loop.hpp  player.cpp  player.hpp  scene.cpp  scene.hpp  scene_game.cpp  scene_game.hpp  scene_main_menu.cpp  scene_main_menu.hpp  tile.cpp  tile.hpp  time.cpp  time.hpp  ui.cpp  ui.hpp
